--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   transform: translateY(-26rem);
-  color: aliceblue;
+  color: rgb(31, 31, 31);
   margin-left: 26rem;
   padding: 0.8rem 6rem 4rem 2rem;
 }
@@ -26,7 +26,7 @@
 }
 
 .main-content-text {
-  font-size: 0.8rem;
+  font-size: 1rem;
 }
 
 .main-content-btn {
@@ -37,15 +37,15 @@
 .main-content-btn > * {
   font-size: 0.9rem;
   margin-right: 1rem;
+  color: rgba(31, 31, 31, 0.9);
   padding: 0.5rem 1.3rem;
-  border: solid 0.09rem;
-  border-radius: 1.2rem;
+  border: solid 0.09rem rgba(31, 31, 31, 0.5);
+  border-radius: 1rem;
 }
 
 .main-content-btn > *:hover {
-  background-color: aliceblue;
-  color: rgba(109, 122, 200, 1);
-  font-weight: bold;
+  background-color: rgb(31, 31, 31);
+  color: white;
   transition-duration: 0.3s;
 }
 
@@ -65,13 +65,14 @@
 .main-img {
   display: flex;
   align-items: center;
-  height: 36rem;
+  height: 34rem;
   overflow: hidden;
   box-shadow: 2px 2px 0.5rem rgba(88, 88, 88, 0.3);
 }
 
 .main-img-background {
-  transform: translateY(-15rem);
+  transform: translateX(20rem);
+  background-repeat: repeat;
   animation-name: move-img;
   animation-duration: 4.4s;
   animation-iteration-count: infinite;
@@ -97,7 +98,7 @@
   font-size: 2.8rem;
   font-weight: bold;
   margin-bottom: 2.5rem;
-  color: rgba(119, 96, 155, 1);
+  color: rgba(31, 31, 31, 0.8);
   margin-right: 1.5rem;
 }
 
@@ -150,8 +151,9 @@
   box-shadow: 2px 2px 0.5rem rgba(88, 88, 88, 0.3);
 }
 
-.main-mid-service > .service:nth-child(3) > img {
+.main-mid-service > .service > img {
   height: 25rem;
+  border-radius: 0.5rem;
 }
 
 .main-mid-service > * > .service-content {
@@ -188,7 +190,7 @@
   font-size: 2.8rem;
   font-weight: bold;
   margin-bottom: 2.5rem;
-  color: rgba(119, 96, 155, 1);
+  color: rgb(31, 31, 31);
   margin-right: 1.5rem;
 }
 
