--- a/bin/main/static/css/all.css
+++ b/bin/main/static/css/all.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Gothic+A1&family=Noto+Sans+KR&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;600;700;800;900&display=swap");
 
 body {
   display: flex;
   flex-direction: column;
   font-family: "Noto Sans KR", sans-serif;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0;
   line-height: 1.6rem;
   width: 1850px;
   padding-left: 1.2rem;
