--- a/bin/main/static/css/join.css
+++ b/bin/main/static/css/join.css
@@ -1,83 +1,145 @@
-.join-identity {
+* {
+  color: rgba(41, 45, 50, 1);
+}
+
+.after-join-content {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.8rem;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 2px 2px 0.5rem rgba(226, 226, 226, 0.1);
+  margin-left: 16rem;
+  padding: 3rem 10rem 4rem 10rem;
+}
+
+.join-ing {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+@keyframes ingImg {
+  0% {
+    scale: 75%;
+  }
+  50% {
+    scale: 90%;
+  }
+  100% {
+    scale: 75%;
+  }
+}
+
+.join-ing > img {
+  scale: 70%;
+}
+
+.join-ing > img:nth-child(1) {
+  scale: 70%;
+  animation-duration: 1.5s;
+  animation-name: ingImg;
+  animation-iteration-count: infinite;
+}
+
+.join-ing > img:not(:nth-child(1)) {
+  opacity: 0.2;
+}
+
+.join-ing > div {
+  width: 13rem;
+  border-bottom: solid 0.11rem rgba(41, 45, 50, 0.2);
+  margin-bottom: 1rem;
+}
+.join-ing > * {
+  margin: 0 0.3rem;
+}
+
+.after-join-identity-title {
+  margin-left: 4rem;
+}
+.after-join-identity-title-list-sub {
+  margin-left: 4rem;
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.after-join-identity-title-list {
   display: flex;
   align-items: center;
+  margin-bottom: -0.7rem;
+}
+
+.after-join-identity-title-list-img{
+  margin-top: 0.8rem;
+  margin-right: 0.4rem;
+}
+
+.after-join-identity-title-list > .after-join-identity-title-list-main {
+  font-size: 1.7rem;
+  font-weight: 800;
+}
+
+.after-join-identity {
+  display: flex;
   justify-content: space-between;
-  margin-bottom: 1.3rem;
-  margin-left: 3.4rem;
-  border-radius: 0.3rem;
-  /* border-bottom: solid 0.1rem rgba(31, 31, 31, 0.7); */
+  align-items: center;
 }
 
-.join-title {
-  position: absolute;
-  font-size: 3rem;
-  font-weight: bold;
-  margin-left: 40rem;
-  text-shadow: 2px 2px 0.4rem rgba(22, 22, 22, 0.3);
-  margin-top: -38rem;
-  color: rgb(255, 255, 255);
+#join-identity-general,
+#join-identity-author {
+  height: 17.5rem;
+  background-color: rgba(41, 45, 50, 1);
+  border-radius: 1rem;
+  padding: 3.3rem 2rem 0 2rem;
+  box-shadow: 2px 2px 0.5rem rgba(88, 88, 88, 0.3);
+  scale: 90%;
 }
 
-.join-identity > * {
-  padding: 0.5rem 6.5rem;
-  border-radius: 0.4rem;
-  background-color: rgba(31, 31, 31, 0.9);
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-}
-
-.join-identity > :nth-child(2) {
-  margin-left: 1rem;
-  background-color: rgba(31, 31, 31, 0.3);
-}
-.join-all-list {
-  display: flex;
-  padding: 0.4rem 0.2rem;
-}
-
-.join-list-name {
-  padding-left: 9.5rem;
-}
-
-.join-id,
-.join-password,
-.join-phone {
-  margin-right: 1rem;
-}
-
-.join-all-list > * {
-  margin: 0.5rem;
-  display: flex;
-}
-.join-all-list > * > div {
-  margin-right: 0.8rem;
-  margin-bottom: 0.2rem;
-  font-size: 0.9rem;
-  color: rgba(52, 52, 52, 0.9);
-}
-
-.join-all-list > * > input {
-  width: 13rem;
-  height: 1.4rem;
-  outline: none;
-  border: none;
-  color: rgba(52, 52, 52, 0.9);
-  border-bottom: solid 0.1rem rgba(52, 52, 52, 0.3);
-  padding-left: 0.5rem;
-}
-
-.join-btn {
-  margin: 0 auto;
-  border: none;
-  margin-top: 1.6rem;
-  padding: 0.7rem 3rem;
-  border-radius: 0.7rem;
+#join-identity-general > * {
   color: white;
-  background-color: rgba(88, 88, 88, 0.2);
-  font-weight: bold;
-  cursor: not-allowed;
 }
 
-.join-email {
+#join-identity-author > * {
+  color: white;
+}
+
+.join-general-type-ko,
+.join-author-type-ko {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+#join-identity-general > img {
+  margin-left: 0.3rem;
+}
+
+#join-identity-author > img {
+  margin-left: 0.3rem;
+}
+.join-general-type-en,
+.join-author-type-en {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 2.5rem;
+}
+
+.join-general-list,
+.join-author-list {
+  font-weight: 300;
+}
+
+.join-identity-btn {
+  width: 8rem;
+  margin: 0 auto;
+  margin-top: 2rem;
+  font-size: 1rem;
+  padding: 0.5rem 0;
+  border: none;
+  border: solid 0.1rem rgba(41, 45, 50, 1);
+  border-radius: 0.5rem;
+  background-color: white;
+  color: rgba(41, 45, 50, 1);
   cursor: not-allowed;
 }
