--- a/src/main/resources/static/css/myfage/myfage-mid-chat.css
+++ b/src/main/resources/static/css/myfage/myfage-mid-chat.css
@@ -22,7 +22,28 @@
 
 .myfage-chat-not-check:hover {
   transform: translateY(-0.4rem);
-  transition-duration: 1s;
+  transition-duration: 0.3s;
+}
+
+.myfage-chat-box-default-title{
+  clear: both;
+  font-size: 1.5rem;
+  font-weight: 600;
+  justify-content: center;
+  align-items: center;
+  color: rgba(41, 45, 50, 1);
+  margin: 0 3rem;
+  margin-top: 20rem;
+}
+
+.myfage-chat-box-default-intro{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: rgba(41, 45, 50, 1);
+  margin-top: 0.5rem;
 }
 
 .myfage-chat-list {
