--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -2,14 +2,46 @@ container {
   width: 70%;
   margin: 0 auto;
   margin-top: 4rem;
-  border: solid 0.1rem rgba(41, 45, 50, 0.3);
-  padding: 0.7rem 2rem 1rem 2rem;
+  box-shadow: 2px 2px 0.2rem rgba(88, 88, 88, 0.1);
+  border-radius: 1rem;
+  border: solid 0.1rem rgba(88, 88, 88, 0.1);
 }
 
-textarea {
+@keyframes scale-move-check {
+  0% {
+    scale: 40%;
+  }
+
+  50% {
+    scale: 45%;
+  }
+
+  100% {
+    scale: 40%;
+  }
+}
+
+@keyframes updown {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-0.4rem);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* animation-name: updown;
+animation-duration: 3s;
+animation-iteration-count: infinite; */
+
+.detail-bot-intro-value {
   resize: none;
   outline: none;
-  border: solid 0.1rem rgba(41, 45, 50, 0.3);
   padding: 0.5rem;
 }
 
@@ -22,6 +54,10 @@ textarea {
   align-items: center;
 }
 
+.detail-top-article-num {
+  margin-right: 0.5rem;
+}
+
 .detail-mid-right-chat > *,
 .detail-mid-right-deadline > *,
 .detail-mid-right-payment > * {
@@ -32,57 +68,144 @@ input {
   font-family: "Noto Sans KR", sans-serif;
   scale: 90%;
 }
-
-.detail-top-title-label,
-.detail-top-article-num-label {
-  margin-right: 0.5rem;
-}
-
 .detail-mid-right-chat-label,
 .detail-mid-right-deadline-label,
 .detail-mid-right-payment-label {
+  display: flex;
   margin-right: 0.3rem;
+  align-items: center;
+}
+
+input[type="button"]:not(
+    .product-chat-room-box-top-show-exit,
+    .detail-mid-right-payment-btn,
+    .detail-mid-right-chat-btn
+  ),
+input[type="date"] {
+  outline: none;
+  border: solid 0.01rem rgba(41, 45, 50, 0.1);
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 2px 2px 0.2rem rgba(88, 88, 88, 0.1);
+  padding: 0.2rem 0.7rem;
+  color: rgba(41, 45, 50, 1);
+  font-size: 0.9rem;
+  font-weight: 700;
+  cursor: pointer;
+  margin: 0 0.2rem;
+}
+
+.detail-mid-right-chat-btn {
+  outline: none;
+  border: solid 0.01rem rgba(41, 45, 50, 0.1);
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 2px 2px 0.2rem rgba(88, 88, 88, 0.1);
+  padding: 0.3rem 0.9rem;
+  color: rgba(41, 45, 50, 1);
+  font-size: 0.9rem;
+  font-weight: 700;
+  cursor: pointer;
+  margin: 0 0.2rem;
 }
 
 .detail-top-title-label,
-.detail-top-article-num-label,
-input[type="button"]:not(.product-chat-room-box-top-show-exit) {
+.detail-top-article-num-label {
+  border: none;
+  outline: none;
   font-weight: 600;
   font-size: 0.9rem;
-  background-color: rgba(41, 45, 50, 1);
+  border: solid 0.01rem white;
   color: white;
   border-radius: 1rem;
   padding: 0.1rem 1rem;
+  margin-right: 0.5rem;
+}
+
+.detail-top-title-value,
+.detail-top-article-num-value {
+  color: white;
+  font-size: 1rem;
+}
+
+.detail-top-title-value {
+  font-weight: 600;
+}
+
+.detail-mid-right-payment-btn {
+  outline: none;
+  border: none;
+  font-weight: 600;
+  font-size: 1.1rem;
+  background-color: rgba(41, 45, 50, 1);
+  color: white;
+  border-radius: 1rem;
+  padding: 0.2rem 1.3rem;
 }
 
 .detail-top,
 .detail-mid {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 0.5rem;
-  margin-bottom: 1rem;
-  border-bottom: solid 0.1rem rgba(41, 45, 50, 0.3);
+  border-bottom: solid 0.1rem rgba(41, 45, 50, 0.1);
+}
+
+.detail-top {
+  align-items: center;
+  background-color: rgba(41, 45, 50, 1);
+  border-radius: 1rem 1rem 0rem 0rem;
+  padding: 0.5rem 1.3rem;
 }
 
 .detail-mid {
-  padding: 0 2rem 1rem 1rem;
+  padding: 0.7rem 3rem;
+  margin-bottom: 1rem;
+}
+
+.detail-mid-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.detail-mid-right-chat-label,
+.detail-mid-right-deadline-label,
+.detail-mid-right-payment-label {
+  display: flex;
+  align-items: center;
+}
+
+.detail-mid-right-check-icon {
+  scale: 40%;
+  opacity: 0.2;
 }
 
 .detail-mid-left {
   display: flex;
   align-items: center;
+  padding: 1rem;
+  padding-right: 3rem;
 }
 
 .detail-mid-left-profile-info-nickname {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
+  border-radius: 0.5rem;
+}
+
+.detail-mid-left-profile-info-intro {
+  font-size: 0.9rem;
+  border: solid 0.1rem rgba(41, 45, 50, 0.1);
+  padding: 0.3rem 0.8rem;
+  width: 18rem;
+  border-radius: 0.5rem;
 }
 
 .detail-mid-left-profile-img-value {
-  width: 5rem;
-  height: 5rem;
-  border: solid 0.1rem;
+  width: 6rem;
+  height: 6rem;
+  border: solid 0.1rem rgba(41, 45, 50, 0.1);
   border-radius: 50%;
   margin-right: 1rem;
 }
@@ -99,9 +222,10 @@ input[type="button"]:not(.product-chat-room-box-top-show-exit) {
   justify-content: center;
   background-color: rgba(41, 45, 50, 1);
   color: white;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   padding: 0.25rem 2rem;
   margin-bottom: 1rem;
+  box-shadow: 2px 2px 0.2rem rgba(88, 88, 88, 0.5);
 }
 
 .detail-bot-caution > * {
@@ -109,7 +233,7 @@ input[type="button"]:not(.product-chat-room-box-top-show-exit) {
 }
 
 .detail-bot-caution-icon {
-  scale: 95%;
+  scale: 80%;
 }
 
 .detail-bot-caution-title {
@@ -132,19 +256,27 @@ input[type="button"]:not(.product-chat-room-box-top-show-exit) {
 
 .detail-bot-intro,
 .detail-bot-img {
-  margin-bottom: 5rem;
+  margin: 5rem 0rem;
 }
 
 .detail-bot-intro-label,
 .detail-bot-img-label {
-  font-size: 1.4rem;
+  font-size: 2.5rem;
   font-weight: 700;
+  color: rgba(41, 45, 50, 0.8);
+  margin: 2rem 0rem;
 }
 
 .detail-mid-right-chat-btn,
 .detail-mid-right-deadline-btn,
 .detail-mid-right-payment-btn {
   cursor: pointer;
+}
+
+.detail-bot-img-lists-value {
+  width: 850px;
+  object-fit: cover;
+  margin: 1rem 0rem;
 }
 
 /* chat */
