--- a/src/main/resources/static/css/myfage/myfage-nav.css
+++ b/src/main/resources/static/css/myfage/myfage-nav.css
@@ -25,6 +25,9 @@ container {
 
 .myfage-nav-profile {
     margin-top: 3rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
 }
 
 .myfage-nav-profile-greeting {
@@ -37,15 +40,26 @@ container {
 }
 
 .myfage-nav-profile-img {
-    width: 6rem;
-    height: 6rem;
+    background-size: cover;
+    object-fit: contain;
+    width: 8rem;
+    height: 8rem;
     border-radius: 50%;
-    overflow: hidden;
+    overflow: hidden; /* 이미지가 경계를 벗어나지 않도록 함 */
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 1rem;
+    transform-origin: center center;
 }
+
+
+.myfage-nav-profile-img-tag {
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+}
+
 
 .myfage-nav-profile-identity {
     background-color: white;
