--- a/src/main/resources/static/css/default/all.css
+++ b/src/main/resources/static/css/default/all.css
@@ -6,8 +6,12 @@ body {
 	font-family: "Noto Sans KR", sans-serif;
 	letter-spacing: 0;
 	line-height: 1.6rem;
-	width: 1850px;
+	width:100%;
+	max-width: 1850px;
+	min-width: 1000px;
 	padding-left: 1.2rem;
+	box-sizing:border-box;
+	margin:0;
 }
 
 input[readonly] {
