--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -1,5 +1,6 @@
 container {
     width: 70%;
+    min-width: 1200px;
     margin: 0 auto;
     margin-top: 4rem;
     box-shadow: 2px 2px 0.2rem rgba(88, 88, 88, 0.1);
