--- a/src/main/resources/static/css/default/nav.css
+++ b/src/main/resources/static/css/default/nav.css
@@ -113,7 +113,7 @@ nav {
 	border: 1px solid #000;
 	border-radius: 5px;
 	background: #fff;
-	cursor: inherit;
+	cursor: auto;
 }
 
 .alram-con .title {
