--- a/bin/main/static/css/agree.css
+++ b/bin/main/static/css/agree.css
@@ -122,3 +122,17 @@ textarea::-webkit-scrollbar-track {
   scale: 102%;
   transition-duration: 0.15s;
 }
+
+@keyframes updown-email {
+  0% {
+    margin-top: 0rem;
+  }
+
+  50% {
+    margin-top: -1rem;
+  }
+
+  100% {
+    margin-top: 0rem;
+  }
+}
