--- a/bin/main/static/css/myfage/myfage-mid-chat.css
+++ b/bin/main/static/css/myfage/myfage-mid-chat.css
@@ -55,7 +55,7 @@
   padding: 1.7rem 0.7rem 0.9rem 1rem;
   box-shadow: 2px 2px 0.5rem rgba(88, 88, 88, 0.3);
   border-radius: 1rem;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .myfage-chat-list:hover {
@@ -73,9 +73,10 @@
 .myfage-chat-profile-identity {
   background-color: rgba(41, 45, 50, 1);
   color: white;
-  font-size: 0.8rem;
+  font-size: 0.3rem;
   width: 2.7rem;
   height: 0.9rem;
+  padding: 0.2rem;
   border-radius: 0.7rem;
   display: flex;
   align-items: center;
@@ -86,18 +87,22 @@
 }
 
 .myfage-chat-profile-img {
-  scale: 90%;
-  border-radius: 5rem;
-  width: 3.5rem;
-  height: 3.5rem;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.myfage-chat-profile-img-tag {
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 5rem;
+  object-fit: cover;
+}
+
 .myfage-chat-content {
   display: flex;
+  cursor: pointer;
 }
 
 .myafge-chat-info {
@@ -141,6 +146,7 @@
   align-items: center;
   scale: 80%;
   margin-top: -0.5rem;
+  cursor: pointer;
 }
 
 .myfage-chat-delete:hover {
